# renderer

./: .gitignore  CMakeLists.txt  arealight.cpp  arealight.h  axisalignedbox.cpp  axisalignedbox.h  bidipathtracingintegrator.cpp  binaryintegrator.cpp  binaryintegrator.h  binarymaterial.cpp  binarymaterial.h  bsp.cpp  bsp.h  bvh.cpp  bvh.h  camera.cpp  camera.h  competitionscene2.h  conelight.cpp  conelight.h  cornellscene.h  csgintersection.cpp  csgintersection.h  csgobject.cpp  csgobject.h  csgscene.h  darkmatter.cpp  darkmatter.h  diffusematerial.cpp  diffusematerial.h  directionallight.cpp  directionallight.h  emscene.h  environmentmap.cpp  environmentmap.h  film.h  hdrloader.cpp  hitrecord.cpp  hitrecord.h  integrator.cpp  (+62 more)
scenes/: cornellscene.h  csgscene.h  s3scene.h  scene0.h  scene1.h  tmscene.h
src/: CMakeLists.txt  abstractdiffusematerial.cpp  abstractdiffusematerial.h  arealight.cpp  arealight.h  axisalignedbox.cpp  axisalignedbox.h  bidipathtracingintegrator.cpp  bidipathtracingintegrator.h  binarymaterial.cpp  binarymaterial.h  blacklight.cpp  blacklight.h  blinnmaterial.cpp  blinnmaterial.h  bvh.cpp  bvh.h  camera.cpp  camera.h  conelight.cpp  conelight.h  csgintersection.cpp  csgintersection.h  csgobject.cpp  csgobject.h  csgoperation.cpp  csgoperation.h  darkmatter.cpp  darkmatter.h  diffusematerial.cpp  diffusematerial.h  dumpbvh.cpp  energyredistributionrenderer.cpp  energyredistributionrenderer.h  environmentmap.cpp  environmentmap.h  film.cpp  film.h  global.h  hitrecord.h  (+75 more)
src/scenes/: competitionscene2.h  cornellscene.h  csgscene.h  mtscene.h  s3scene.h  scene0.h  scene1.h  scene2.h  scene3.h  scene4.h  sscene.h  tmscene.h
